site-styles: Fix alignment issue with narrow viewports

--- a/site-styles/pages/main.less
+++ b/site-styles/pages/main.less
@@ -9,7 +9,9 @@
 		flex-direction: row;
 		align-items: center;
 
-		#flex-flexible-spacing(@gutter);
+		#screen-md-min({
+			#flex-flexible-spacing(@gutter);
+		});
 
 		#screen-sm-max({
 			flex-direction: column;
